--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@ body {
     height: 100%;
     margin: 0;
 }
-
+main{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
 .attribution {
     font-size: 11px;
     text-align: center;
